Replaced <hr> with optgroup labels

--- a/index.html
+++ b/index.html
@@ -20,67 +20,70 @@
 						<label for="raceDropdown"><b>Volk:</b></label>
 						<select class="form-control small-dropdown" id="raceDropdown">
 							<option id="randomRace">Zufall</option>
-							<option id="humanRandom">Mensch - Zufall</option>
-							<option id="humanArabic">Mensch - Arabisch</option>
-							<option id="humanBantu">Mensch - Bantuisch</option>
-							<option id="humanCeltic">Mensch - Keltisch</option>
-							<option id="humanChinese">Mensch - Chinesisch</option>
-							<option id="humanEgyptian">Mensch - Ägyptisch</option>
-							<option id="humanGermanic">Mensch - Germanisch</option>
-							<option id="humanGreek">Mensch - Griechisch</option>
-							<option id="humanIndian">Mensch - Indisch</option>
-							<option id="humanJapanese">Mensch - Japanisch</option>
-							<option id="humanMesoAmerican">Mensch - Meso-Amerikanisch</option>
-							<option id="humanPersian">Mensch - Persisch</option>
-							<option id="humanPolynesian">Mensch - Polynesisch</option>
-							<option id="humanRomanic">Mensch - Romanisch</option>
-							<option id="humanScandinavian">Mensch - Skandinavisch</option>
-							<option id="humanSlavic">Mensch - Slawisch</option>
-							<option id="dwarf">Zwerg</option>
-							<option id="elf">Elf</option>
-							<option id="hafling">Halbling</option>
-							<option id="gnome">Gnom</option>
-							<option id="halfElf">Halbelf</option>
-							<option id="halfOrc">Halbork</option>
-							<option id="dragonborn">Drachenblütiger</option>
-							<option id="tiefling">Tiefling</option>
-							<hr>
-							<option id="aasimar">Aasimar</option>
-							<option id="aarakocra">Aarakocra</option>
-							<option id="astralElf">Astralelf</option>
-							<option id="paleElf">Blasself</option>
-							<option id="duergar">Duergar</option>
-							<option id="drow">Drow</option>
-							<option id="lizardfolk">Echsenmensch</option>
-							<option id="eladrin">Eladrin</option>
-							<option id="fairy">Fee</option>
-							<option id="firbolg">Firbolg</option>
-							<option id="earthGenasi">Erdgenasi</option>
-							<option id="fireGenasi">Feuergenasi</option>
-							<option id="airGenasi">Luftgenasi</option>
-							<option id="waterGenasi">Wassergenasi</option>
-							<option id="githyanki">Githyanki</option>
-							<option id="githzerai">Githzerai</option>
-							<option id="goblin">Goblin</option>
-							<option id="goliath">Goliath</option>
-							<option id="bugbear">Grottenschrat</option>
-							<option id="grung">Grung</option>
-							<option id="harengon">Harengon</option>
-							<option id="hobgoblin">Hobgoblin</option>
-							<option id="kalasthar">Kalashtar</option>
-							<option id="kenku">Kenku</option>
-							<option id="warforged">Kriegsgeschmiedeter</option>
-							<option id="leonin">Leonid</option>
-							<option id="loxodon">Loxodon</option>
-							<option id="seaElf">Meereself</option>
-							<option id="minotaur">Minotaurus</option>
-							<option id="orc">Ork</option>
-							<option id="shadar-kai">Schadar-Kai</option>
-							<option id="simicHybrid">Simic-Hybrid</option>
-							<option id="tabaxi">Tabaxi</option>
-							<option id="deepGnomes">Tiefengnom</option>
-							<option id="triton">Triton</option>
-							<option id="vedalken">Vedalken</option>
+							<optgroup label="Völker des Spielerhandbuchs">
+								<option id="humanRandom">Mensch - Zufall</option>
+								<option id="humanArabic">Mensch - Arabisch</option>
+								<option id="humanBantu">Mensch - Bantuisch</option>
+								<option id="humanCeltic">Mensch - Keltisch</option>
+								<option id="humanChinese">Mensch - Chinesisch</option>
+								<option id="humanEgyptian">Mensch - Ägyptisch</option>
+								<option id="humanGermanic">Mensch - Germanisch</option>
+								<option id="humanGreek">Mensch - Griechisch</option>
+								<option id="humanIndian">Mensch - Indisch</option>
+								<option id="humanJapanese">Mensch - Japanisch</option>
+								<option id="humanMesoAmerican">Mensch - Meso-Amerikanisch</option>
+								<option id="humanPersian">Mensch - Persisch</option>
+								<option id="humanPolynesian">Mensch - Polynesisch</option>
+								<option id="humanRomanic">Mensch - Romanisch</option>
+								<option id="humanScandinavian">Mensch - Skandinavisch</option>
+								<option id="humanSlavic">Mensch - Slawisch</option>
+								<option id="dwarf">Zwerg</option>
+								<option id="elf">Elf</option>
+								<option id="hafling">Halbling</option>
+								<option id="gnome">Gnom</option>
+								<option id="halfElf">Halbelf</option>
+								<option id="halfOrc">Halbork</option>
+								<option id="dragonborn">Drachenblütiger</option>
+								<option id="tiefling">Tiefling</option>
+							</optgroup>
+							<optgroup label="Weitere Völker">
+								<option id="aasimar">Aasimar</option>
+								<option id="aarakocra">Aarakocra</option>
+								<option id="astralElf">Astralelf</option>
+								<option id="paleElf">Blasself</option>
+								<option id="duergar">Duergar</option>
+								<option id="drow">Drow</option>
+								<option id="lizardfolk">Echsenmensch</option>
+								<option id="eladrin">Eladrin</option>
+								<option id="fairy">Fee</option>
+								<option id="firbolg">Firbolg</option>
+								<option id="earthGenasi">Erdgenasi</option>
+								<option id="fireGenasi">Feuergenasi</option>
+								<option id="airGenasi">Luftgenasi</option>
+								<option id="waterGenasi">Wassergenasi</option>
+								<option id="githyanki">Githyanki</option>
+								<option id="githzerai">Githzerai</option>
+								<option id="goblin">Goblin</option>
+								<option id="goliath">Goliath</option>
+								<option id="bugbear">Grottenschrat</option>
+								<option id="grung">Grung</option>
+								<option id="harengon">Harengon</option>
+								<option id="hobgoblin">Hobgoblin</option>
+								<option id="kalasthar">Kalashtar</option>
+								<option id="kenku">Kenku</option>
+								<option id="warforged">Kriegsgeschmiedeter</option>
+								<option id="leonin">Leonid</option>
+								<option id="loxodon">Loxodon</option>
+								<option id="seaElf">Meereself</option>
+								<option id="minotaur">Minotaurus</option>
+								<option id="orc">Ork</option>
+								<option id="shadar-kai">Schadar-Kai</option>
+								<option id="simicHybrid">Simic-Hybrid</option>
+								<option id="tabaxi">Tabaxi</option>
+								<option id="deepGnomes">Tiefengnom</option>
+								<option id="triton">Triton</option>
+								<option id="vedalken">Vedalken</option>
+							</optgroup>
 						</select>
 					</div>
 				</div>
