Added Giff as a selectable race

--- a/index.html
+++ b/index.html
@@ -61,10 +61,11 @@
 								<option id="fireGenasi">Feuergenasi</option>
 								<option id="airGenasi">Luftgenasi</option>
 								<option id="waterGenasi">Wassergenasi</option>
+								<option id="giff">Giff</option>
 								<option id="githyanki">Githyanki</option>
 								<option id="githzerai">Githzerai</option>
 								<option id="goblin">Goblin</option>
-								<option id="goliath">Goliath</option>
+								<option id="goliath">Goliath</option>								
 								<option id="bugbear">Grottenschrat</option>
 								<option id="grung">Grung</option>
 								<option id="harengon">Harengon</option>
@@ -228,6 +229,9 @@
 	<script src="scripts/names/first_name/generateRandomFirstNameGenasiWaterFemale.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameGenasiWaterMale.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameGenasiWaterNonBinary.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNameGiffFemale.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNameGiffMale.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNameGiffNonBinary.js"></script>
 
 	<script src="scripts/names/first_name/generateRandomFirstNameHumanMaleArabic.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameHumanMaleBantu.js"></script>
@@ -327,7 +331,7 @@
 	<script src="scripts/names/last_name/generateRandomLastNameGenasiEarth.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameGenasiFire.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameGenasiWater.js"></script>
-
+	<script src="scripts/names/last_name/generateRandomLastNameGiff.js"></script>
 	<!--Scripts for race, gender, region, name, first name and last name generation-->
 	<script src="scripts/names/generateFirstName.js"></script>
 	<script src="scripts/names/generateLastName.js"></script>
@@ -368,6 +372,7 @@
 	<script src="scripts/names/syllables_name/deepGnomeNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/fairyNamesSyllables.js"></script>
 	<script src="scripts/names/syllables_name/genasiNameSyllables.js"></script>
+	<script src="scripts/names/syllables_name/giffNameSyllables.js"></script>
 </body>
 
 </html>
