Added Hadozee as a selectable race

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 								<option id="goliath">Goliath</option>								
 								<option id="bugbear">Grottenschrat</option>
 								<option id="grung">Grung</option>
+								<option id="hadozee">Hadozee</option>
 								<option id="harengon">Harengon</option>
 								<option id="hobgoblin">Hobgoblin</option>
 								<option id="kalasthar">Kalashtar</option>
@@ -232,6 +233,9 @@
 	<script src="scripts/names/first_name/generateRandomFirstNameGiffFemale.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameGiffMale.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameGiffNonBinary.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNameHadozeeFemale.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNameHadozeeMale.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNameHadozeeNonBinary.js"></script>
 
 	<script src="scripts/names/first_name/generateRandomFirstNameHumanMaleArabic.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameHumanMaleBantu.js"></script>
@@ -332,6 +336,8 @@
 	<script src="scripts/names/last_name/generateRandomLastNameGenasiFire.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameGenasiWater.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameGiff.js"></script>
+	<script src="scripts/names/last_name/generateRandomLastNameHadozee.js"></script>
+
 	<!--Scripts for race, gender, region, name, first name and last name generation-->
 	<script src="scripts/names/generateFirstName.js"></script>
 	<script src="scripts/names/generateLastName.js"></script>
@@ -373,6 +379,7 @@
 	<script src="scripts/names/syllables_name/fairyNamesSyllables.js"></script>
 	<script src="scripts/names/syllables_name/genasiNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/giffNameSyllables.js"></script>
+	<script src="scripts/names/syllables_name/hadozeeNameSyllables.js"></script>
 </body>
 
 </html>
