Added Kender as a selectable race

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 								<option id="harengon">Harengon</option>
 								<option id="hobgoblin">Hobgoblin</option>
 								<option id="kalasthar">Kalashtar</option>
+								<option id="kender">Kender</option>
 								<option id="kenku">Kenku</option>
 								<option id="warforged">Kriegsgeschmiedeter</option>
 								<option id="leonin">Leonid</option>
@@ -236,6 +237,9 @@
 	<script src="scripts/names/first_name/generateRandomFirstNameHadozeeFemale.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameHadozeeMale.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameHadozeeNonBinary.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNameKenderFemale.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNameKenderMale.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNameKenderNonBinary.js"></script>
 
 	<script src="scripts/names/first_name/generateRandomFirstNameHumanMaleArabic.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameHumanMaleBantu.js"></script>
@@ -337,6 +341,7 @@
 	<script src="scripts/names/last_name/generateRandomLastNameGenasiWater.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameGiff.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameHadozee.js"></script>
+	<script src="scripts/names/last_name/generateRandomLastNameKender.js"></script>
 
 	<!--Scripts for race, gender, region, name, first name and last name generation-->
 	<script src="scripts/names/generateFirstName.js"></script>
@@ -380,6 +385,7 @@
 	<script src="scripts/names/syllables_name/genasiNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/giffNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/hadozeeNameSyllables.js"></script>
+	<script src="scripts/names/syllables_name/kenderNameSyllables.js"></script>
 </body>
 
 </html>
