--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
 								<option id="kalasthar">Kalashtar</option>
 								<option id="kender">Kender</option>
 								<option id="kenku">Kenku</option>
+								<option id="kobold">Kobold</option>
 								<option id="warforged">Kriegsgeschmiedeter</option>
 								<option id="leonin">Leonid</option>
 								<option id="loxodon">Loxodon</option>
@@ -240,7 +241,7 @@
 	<script src="scripts/names/first_name/generateRandomFirstNameKenderFemale.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameKenderMale.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameKenderNonBinary.js"></script>
-
+	<script src="scripts/names/first_name/generateRandomFirstNameKobold.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameHumanMaleArabic.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameHumanMaleBantu.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameHumanMaleCeltic.js"></script>
@@ -342,6 +343,7 @@
 	<script src="scripts/names/last_name/generateRandomLastNameGiff.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameHadozee.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameKender.js"></script>
+	<script src="scripts/names/last_name/generateRandomLastNameKobold.js"></script>
 
 	<!--Scripts for race, gender, region, name, first name and last name generation-->
 	<script src="scripts/names/generateFirstName.js"></script>
@@ -386,6 +388,7 @@
 	<script src="scripts/names/syllables_name/giffNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/hadozeeNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/kenderNameSyllables.js"></script>
+	<script src="scripts/names/syllables_name/koboldNameSyllables.js"></script>
 </body>
 
 </html>
