--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
 								<option id="kobold">Kobold</option>
 								<option id="warforged">Kriegsgeschmiedeter</option>
 								<option id="leonin">Leonid</option>
+								<option id="locathah">Locathah</option>
 								<option id="loxodon">Loxodon</option>
 								<option id="seaElf">Meereself</option>
 								<option id="minotaur">Minotaurus</option>
@@ -242,6 +243,8 @@
 	<script src="scripts/names/first_name/generateRandomFirstNameKenderMale.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameKenderNonBinary.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameKobold.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNameLocathah.js"></script>
+
 	<script src="scripts/names/first_name/generateRandomFirstNameHumanMaleArabic.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameHumanMaleBantu.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameHumanMaleCeltic.js"></script>
@@ -344,6 +347,7 @@
 	<script src="scripts/names/last_name/generateRandomLastNameHadozee.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameKender.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameKobold.js"></script>
+	<script src="scripts/names/last_name/generateRandomLastNameLocathah.js"></script>
 
 	<!--Scripts for race, gender, region, name, first name and last name generation-->
 	<script src="scripts/names/generateFirstName.js"></script>
@@ -389,6 +393,7 @@
 	<script src="scripts/names/syllables_name/hadozeeNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/kenderNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/koboldNameSyllables.js"></script>
+	<script src="scripts/names/syllables_name/locathahNameSyllables.js"></script>
 </body>
 
 </html>
