Added Plasmoids as a selectable race

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
 								<option id="seaElf">Meereself</option>
 								<option id="minotaur">Minotaurus</option>
 								<option id="orc">Ork</option>
+								<option id="plasmoid">Plasmoider</option>
 								<option id="shadar-kai">Schadar-Kai</option>
 								<option id="simicHybrid">Simic-Hybrid</option>
 								<option id="tabaxi">Tabaxi</option>
@@ -244,6 +245,7 @@
 	<script src="scripts/names/first_name/generateRandomFirstNameKenderNonBinary.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameKobold.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameLocathah.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNamePlasmoid.js"></script>
 
 	<script src="scripts/names/first_name/generateRandomFirstNameHumanMaleArabic.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameHumanMaleBantu.js"></script>
@@ -348,6 +350,7 @@
 	<script src="scripts/names/last_name/generateRandomLastNameKender.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameKobold.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameLocathah.js"></script>
+	<script src="scripts/names/last_name/generateRandomLastNamePlasmoid.js"></script>
 
 	<!--Scripts for race, gender, region, name, first name and last name generation-->
 	<script src="scripts/names/generateFirstName.js"></script>
@@ -394,6 +397,7 @@
 	<script src="scripts/names/syllables_name/kenderNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/koboldNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/locathahNameSyllables.js"></script>
+	<script src="scripts/names/syllables_name/plasmoidNameSyllables.js"></script>
 </body>
 
 </html>
