Added Thri-Kreen as a selectable race

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
 								<option id="shadar-kai">Schadar-Kai</option>
 								<option id="simicHybrid">Simic-Hybrid</option>
 								<option id="tabaxi">Tabaxi</option>
+								<option id="thriKreen">Thri-Kreen</option>
 								<option id="deepGnomes">Tiefengnom</option>
 								<option id="triton">Triton</option>
 								<option id="vedalken">Vedalken</option>
@@ -250,6 +251,7 @@
 	<script src="scripts/names/first_name/generateRandomFirstNameSatyrFemale.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameSatyrMale.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameSatyrNonBinary.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNameThriKreen.js"></script>
 
 	<script src="scripts/names/first_name/generateRandomFirstNameHumanMaleArabic.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameHumanMaleBantu.js"></script>
@@ -356,6 +358,7 @@
 	<script src="scripts/names/last_name/generateRandomLastNameLocathah.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNamePlasmoid.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameSatyr.js"></script>
+	<script src="scripts/names/last_name/generateRandomLastNameThriKreen.js"></script>
 
 	<!--Scripts for race, gender, region, name, first name and last name generation-->
 	<script src="scripts/names/generateFirstName.js"></script>
@@ -404,6 +407,7 @@
 	<script src="scripts/names/syllables_name/locathahNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/plasmoidNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/satyrNameSyllables.js"></script>
+	<script src="scripts/names/syllables_name/thriKreenNameSyllables.js"></script>
 </body>
 
 </html>
