Added Tortle as a selectable race

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
 								<option id="tabaxi">Tabaxi</option>
 								<option id="thriKreen">Thri-Kreen</option>
 								<option id="deepGnomes">Tiefengnom</option>
+								<option id="tortle">Tortle</option>
 								<option id="triton">Triton</option>
 								<option id="vedalken">Vedalken</option>
 							</optgroup>
@@ -252,6 +253,7 @@
 	<script src="scripts/names/first_name/generateRandomFirstNameSatyrMale.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameSatyrNonBinary.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameThriKreen.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNameTortle.js"></script>
 
 	<script src="scripts/names/first_name/generateRandomFirstNameHumanMaleArabic.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameHumanMaleBantu.js"></script>
@@ -359,6 +361,7 @@
 	<script src="scripts/names/last_name/generateRandomLastNamePlasmoid.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameSatyr.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameThriKreen.js"></script>
+	<script src="scripts/names/last_name/generateRandomLastNameTortle.js"></script>
 
 	<!--Scripts for race, gender, region, name, first name and last name generation-->
 	<script src="scripts/names/generateFirstName.js"></script>
@@ -408,6 +411,7 @@
 	<script src="scripts/names/syllables_name/plasmoidNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/satyrNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/thriKreenNameSyllables.js"></script>
+	<script src="scripts/names/syllables_name/tortleNameSyllables.js"></script>
 </body>
 
 </html>
