Added Verdan as a selectable race

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
 								<option id="triton">Triton</option>
 								<option id="owlin">Uhle</option>
 								<option id="vedalken">Vedalken</option>
+								<option id="verdan">Verdan</option>
 							</optgroup>
 						</select>
 					</div>
@@ -255,6 +256,7 @@
 	<script src="scripts/names/first_name/generateRandomFirstNameSatyrNonBinary.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameThriKreen.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameTortle.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNameVerdan.js"></script>
 
 	<script src="scripts/names/first_name/generateRandomFirstNameHumanMaleArabic.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameHumanMaleBantu.js"></script>
@@ -364,6 +366,7 @@
 	<script src="scripts/names/last_name/generateRandomLastNameThriKreen.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameTortle.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameOwlin.js"></script>
+	<script src="scripts/names/last_name/generateRandomLastNameVerdan.js"></script>
 
 	<!--Scripts for race, gender, region, name, first name and last name generation-->
 	<script src="scripts/names/generateFirstName.js"></script>
@@ -415,6 +418,7 @@
 	<script src="scripts/names/syllables_name/thriKreenNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/tortleNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/owlinNameSyllables.js"></script>
+	<script src="scripts/names/syllables_name/verdanNameSyllables.js"></script
 </body>
 
 </html>
