Moved description of names

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 <body>
 	<div class="container mt-5">
 		<h1><b>Namensgenerator</b></h1>
+		<h4>Beschreibung</h4>
+		<div id="descriptionNames"></div>
 		<form id="nameGeneratorForm">
 			<div class="row">
 				<div class="col-md-4">
@@ -143,7 +145,6 @@
 			</div>
 		</form>
 		<br>
-		<div id="descriptionNames"></div>
 		<h2>Generierte Namen:</h2>
 		<div id="generatedNames"></div>
 	</div>
