--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
 								<option id="owlin">Uhle</option>
 								<option id="vedalken">Vedalken</option>
 								<option id="verdan">Verdan</option>
+								<option id="shifter">Wandler</option>
 							</optgroup>
 						</select>
 					</div>
@@ -258,6 +259,7 @@
 	<script src="scripts/names/first_name/generateRandomFirstNameThriKreen.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameTortle.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameVerdan.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNameShifter.js"></script>
 
 	<script src="scripts/names/first_name/generateRandomFirstNameHumanMaleArabic.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameHumanMaleBantu.js"></script>
@@ -368,6 +370,7 @@
 	<script src="scripts/names/last_name/generateRandomLastNameTortle.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameOwlin.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameVerdan.js"></script>
+	<script src="scripts/names/last_name/generateRandomLastNameShifter.js"></script>
 
 	<!--Scripts for race, gender, region, name, first name and last name generation-->
 	<script src="scripts/names/generateFirstName.js"></script>
@@ -396,7 +399,7 @@
 	<script src="scripts/names/syllables_name/goliathNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/grungNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/kalashtarNameSyllables.js"></script>
-	<script src="scripts/names/syllables_name/warforgedNamesSyllables.js"></script>
+	<script src="scripts/names/syllables_name/warforgedNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/kenkuNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/tabaxiNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/tritonNameSyllables.js"></script>
@@ -419,7 +422,8 @@
 	<script src="scripts/names/syllables_name/thriKreenNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/tortleNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/owlinNameSyllables.js"></script>
-	<script src="scripts/names/syllables_name/verdanNameSyllables.js"></script
+	<script src="scripts/names/syllables_name/verdanNameSyllables.js"></script>
+	<script src="scripts/names/syllables_name/shifterNameSyllables.js"></script>
 </body>
 
 </html>
