Added Changeling as a selectable race

--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
 								<option id="vedalken">Vedalken</option>
 								<option id="verdan">Verdan</option>
 								<option id="shifter">Wandler</option>
+								<option id="changeling">Wechselbalg</option>
 							</optgroup>
 						</select>
 					</div>
@@ -260,7 +261,9 @@
 	<script src="scripts/names/first_name/generateRandomFirstNameTortle.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameVerdan.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameShifter.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNameChangeling.js"></script>
 
+	<!--Scripts for generating the human first name -->
 	<script src="scripts/names/first_name/generateRandomFirstNameHumanMaleArabic.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameHumanMaleBantu.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameHumanMaleCeltic.js"></script>
@@ -371,6 +374,7 @@
 	<script src="scripts/names/last_name/generateRandomLastNameOwlin.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameVerdan.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameShifter.js"></script>
+	<script src="scripts/names/last_name/generateRandomLastNameChangeling.js"></script>
 
 	<!--Scripts for race, gender, region, name, first name and last name generation-->
 	<script src="scripts/names/generateFirstName.js"></script>
@@ -424,6 +428,7 @@
 	<script src="scripts/names/syllables_name/owlinNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/verdanNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/shifterNameSyllables.js"></script>
+	<script src="scripts/names/syllables_name/changelingNameSyllables.js"></script>
 </body>
 
 </html>
