--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
 								<option id="verdan">Verdan</option>
 								<option id="shifter">Wandler</option>
 								<option id="changeling">Wechselbalg</option>
+								<option id="yuanTi">Yuan-Ti</option>
 							</optgroup>
 						</select>
 					</div>
@@ -262,6 +263,7 @@
 	<script src="scripts/names/first_name/generateRandomFirstNameVerdan.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameShifter.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameChangeling.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNameYuanTi.js"></script>
 
 	<!--Scripts for generating the human first name -->
 	<script src="scripts/names/first_name/generateRandomFirstNameHumanMaleArabic.js"></script>
@@ -375,6 +377,7 @@
 	<script src="scripts/names/last_name/generateRandomLastNameVerdan.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameShifter.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameChangeling.js"></script>
+	<script src="scripts/names/last_name/generateRandomLastNameYuanTi.js"></script>
 
 	<!--Scripts for race, gender, region, name, first name and last name generation-->
 	<script src="scripts/names/generateFirstName.js"></script>
@@ -429,6 +432,7 @@
 	<script src="scripts/names/syllables_name/verdanNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/shifterNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/changelingNameSyllables.js"></script>
+	<script src="scripts/names/syllables_name/yuanTiNameSyllables.js"></script>
 </body>
 
 </html>
