Added Centaur as a selectable race

--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
 								<option id="shifter">Wandler</option>
 								<option id="changeling">Wechselbalg</option>
 								<option id="yuanTi">Yuan-Ti</option>
+								<option id="centaur">Zentaur</option>
 							</optgroup>
 						</select>
 					</div>
@@ -264,6 +265,9 @@
 	<script src="scripts/names/first_name/generateRandomFirstNameShifter.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameChangeling.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameYuanTi.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNameCentaurFemale.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNameCentaurMale.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNameCentaurNonBinary.js"></script>
 
 	<!--Scripts for generating the human first name -->
 	<script src="scripts/names/first_name/generateRandomFirstNameHumanMaleArabic.js"></script>
@@ -378,6 +382,7 @@
 	<script src="scripts/names/last_name/generateRandomLastNameShifter.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameChangeling.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameYuanTi.js"></script>
+	<script src="scripts/names/last_name/generateRandomLastNameCentaur.js"></script>
 
 	<!--Scripts for race, gender, region, name, first name and last name generation-->
 	<script src="scripts/names/generateFirstName.js"></script>
@@ -433,6 +438,7 @@
 	<script src="scripts/names/syllables_name/shifterNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/changelingNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/yuanTiNameSyllables.js"></script>
+	<script src="scripts/names/syllables_name/centaurNameSyllables.js"></script>
 </body>
 
 </html>
