Added Autognome as a selectable race

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 								<option id="aasimar">Aasimar</option>
 								<option id="aarakocra">Aarakocra</option>
 								<option id="astralElf">Astralelf</option>
+								<option id="autognome">Autognom</option>
 								<option id="paleElf">Blasself</option>
 								<option id="duergar">Duergar</option>
 								<option id="drow">Drow</option>
@@ -167,6 +168,7 @@
 	<script src="scripts/names/addNameDescription.js"></script>
 	<script src="scripts/interface/eventListener.js"></script>
 	<script src="scripts/getRandomElement.js"></script>
+	<script src="scripts/names/convertToLeet.js"></script>
 
 	<!--Scripts for generating the first name -->
 	<script src="scripts/names/first_name/generateRandomFirstNameDragonbornFemale.js"></script>
@@ -268,6 +270,9 @@
 	<script src="scripts/names/first_name/generateRandomFirstNameCentaurFemale.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameCentaurMale.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameCentaurNonBinary.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNameAutognomeFemale.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNameAutognomeMale.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNameAutognomeNonBinary.js"></script>
 
 	<!--Scripts for generating the human first name -->
 	<script src="scripts/names/first_name/generateRandomFirstNameHumanMaleArabic.js"></script>
@@ -439,6 +444,7 @@
 	<script src="scripts/names/syllables_name/changelingNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/yuanTiNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/centaurNameSyllables.js"></script>
+	<script src="scripts/names/syllables_name/autognomeNameSyllables.js"></script>
 </body>
 
 </html>
